<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/a"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:id="@+id/aa"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="true"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/b"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:id="@+id/bb"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:textAllCaps="true"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/c"
        android:id="@+id/cc"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="true"

        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="#FFFFFF"
        android:id="@+id/dd"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rez"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:id="@+id/rez"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:imeOptions="actionDone"
        />


</LinearLayout>